syntax = "proto3";

package proto;
option go_package = ".;protobuf";
import "common.proto";

message ApiRegistryReq {
  string appId = 1;
  string appToken = 2;
  repeated string path = 3;
}


service AppService {
  rpc ApiRegister(ApiRegistryReq) returns (CommonRes) {}
}