syntax = "proto3";

package proto;
option go_package = ".;protobuf";

message CommonRes {
  int32 status = 1;
  string message = 2;
}